--- a/src/Album.css
+++ b/src/Album.css
@@ -1,4 +1,4 @@
-#albumInfo{
+#albumInfo {
   max-width: 230px;
   color: white;
   margin-left: 20%;
@@ -8,21 +8,21 @@
   justify-content: center;
   align-items: center;
 }
-#albumInfo img{
+#albumInfo img {
   width: 230px;
-  box-shadow: 0px -3px 32px 4px rgba(0,0,0,0.75)
+  box-shadow: 0px -3px 32px 4px rgba(0, 0, 0, 0.75);
 }
-#albumInfo p:first-of-type{
+#albumInfo p:first-of-type {
   font-size: 18px;
   font-weight: 600;
   margin: 10px auto 0 auto;
 }
-#albumInfo p:nth-of-type(2){
+#albumInfo p:nth-of-type(2) {
   text-align: center;
   font-size: 12px;
   opacity: 0.5;
 }
-#albumInfo button{
+#albumInfo button {
   background-color: rgb(26, 207, 90);
   color: white;
   font-weight: 600;
@@ -31,33 +31,98 @@
   margin: 10px auto 8px auto;
   font-size: 14px;
 }
-#albumInfo p:nth-of-type(3){
+#albumInfo p:nth-of-type(3) {
   font-size: 12px;
   opacity: 0.5;
 }
-#albumInfo #icons > a{
+#albumInfo #icons > a {
   padding: 0 10px;
   font-size: 20px;
 }
-#track{
+#track {
   margin-top: 3%;
   display: flex;
   justify-content: space-between;
 }
-#trackName{
+#track #moreOptions {
+  display: flex;
+  color: white;
+}
+#track #moreOptions svg {
+  margin: 5px 0px 0px 25px;
+}
+#track #moreOptions p {
+  margin-top: 5px;
+}
+#trackName {
   display: flex;
 }
-#trackName p:hover{
+#trackName p:hover {
   color: rgb(26, 207, 90);
   cursor: pointer;
 }
-#trackName #musicIcon{
+#trackName #musicIcon {
   color: white;
   padding: 5px;
   opacity: 0.5;
 }
-#trackName p{
+#trackName p {
   font-size: 12px;
   color: white;
   margin: 0 auto 0 10px;
+}
+.dropdown-toggle::after {
+  border-top: none !important;
+}
+#track #moreOptions .btn-primary {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+#track #moreOptions .btn-primary:hover {
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+#track #moreOptions .btn-primary:focus {
+  box-shadow: none !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+#track #moreOptions .dropdown-menu {
+  background-color: black;
+  transform: translate(-75px, 30px) !important;
+}
+#track #moreOptions .dropdown-item {
+  color: white;
+  font-size: 14px !important;
+}
+#track #moreOptions .dropdown-item:hover {
+  color: rgb(26, 207, 90) !important;
+  background-color: black !important;
+}
+#track #moreOptions #showPlaylists {
+  padding: 0px 7px;
+}
+#track #moreOptions #showPlaylists svg {
+  margin: 0px;
+  font-size: 16px;
+}
+
+#track #moreOptions #playlists {
+  position: absolute;
+  transform: translate(-140px, -25px) !important;
+  background-color: black !important;
+  color: white;
+  padding: 5px 15px;
+  border-radius: 2px;
+  font-size: 14px !important;
+}
+#track #moreOptions #playlists p {
+  margin: 0px;
+}
+#track #moreOptions #playlists p:hover {
+  cursor: pointer;
+  color: rgb(26, 207, 90);
+}
+#track #moreOptions #showPlaylists:hover + #track #moreOptions #playlists {
+  display: none;
 }
