--- a/src/App.css
+++ b/src/App.css
@@ -326,6 +326,10 @@
 
 .contentRows .card {
   box-shadow: 0px -3px 32px 4px rgba(0, 0, 0, 0.75);
+  background-color: transparent !important;
+}
+.contentRows > p {
+  padding-left: 12px;
 }
 .contentRows .col p {
   font-size: 9px;
@@ -334,7 +338,7 @@
   color: white;
 }
 .contentRows .col .cardBody {
-  background-color: transparent;
+  background-color: transparent !important;
   margin-bottom: 0px;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -403,3 +407,32 @@
 #lyrics::-webkit-scrollbar {
   display: none;
 }
+/*searchBox  */
+#searchBox {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: black;
+  padding: 5px;
+  border-radius: 30px;
+}
+#searchBox svg {
+  color: white;
+  font-size: 20px;
+  margin: 0px 5px;
+  margin-top: -4px;
+}
+#searchBox svg:hover {
+  cursor: pointer;
+}
+#searchBox input {
+  background-color: transparent;
+  border: none;
+  color: white;
+  padding: 0px 10px;
+}
+#searchBox input:focus {
+  outline: none;
+  border: none;
+}
+/* search cards*/
