--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -70,3 +70,40 @@
 #register a:hover {
   cursor: pointer;
 }
+#register .forgot {
+  text-align: left;
+  color: #767676 !important;
+  text-decoration: underline;
+}
+#register .forgot:hover {
+  cursor: pointer;
+}
+#register #loginSection {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+#register #loginSection .checkBox {
+  display: flex !important;
+  padding-top: 25px;
+}
+#register #loginSection button {
+  margin-right: 0px;
+}
+
+input[type="checkbox"]:checked:after {
+  background-color: green !important;
+}
+#register #signup {
+  width: 100%;
+  border: 2px solid #767676;
+  border-radius: 30px;
+  padding: 10px;
+  margin-top: 15px;
+  background-color: transparent;
+  color: #767676;
+  font-weight: 600;
+}
+#register #signup:focus {
+  outline: none;
+}
