--- a/src/styles/Register.css
+++ b/src/styles/Register.css
@@ -26,7 +26,7 @@
 #register #logo svg {
   font-size: 40px !important;
 }
-#register #fbRegister {
+#register #googleRegister {
   font-size: 14px !important;
   display: block !important;
   width: 320px;
